	new file:   ZGame/3dsMax/lib3ds-1.3.0/lib3ds/tracks.h
	new file:   ZGame/3dsMax/lib3ds-1.3.0/lib3ds/types.h
	new file:   ZGame/3dsMax/lib3ds-1.3.0/lib3ds/types.txt
	new file:   ZGame/3dsMax/lib3ds-1.3.0/lib3ds/vector.c
	new file:   ZGame/3dsMax/lib3ds-1.3.0/lib3ds/vector.h
	new file:   ZGame/3dsMax/lib3ds-1.3.0/lib3ds/viewport.c
	new file:   ZGame/3dsMax/lib3ds-1.3.0/lib3ds/viewport.h
	new file:   ZGame/3dsMax/lib3ds-1.3.0/ltmain.sh
	new file:   ZGame/3dsMax/lib3ds-1.3.0/missing
	new file:   ZGame/3dsMax/lib3ds-1.3.0/msvc8/3dsdump.vcproj
	new file:   ZGame/3dsMax/lib3ds-1.3.0/msvc8/3dsplay.vcproj
	new file:   ZGame/3dsMax/lib3ds-1.3.0/msvc8/lib3ds.rc
	new file:   ZGame/3dsMax/lib3ds-1.3.0/msvc8/lib3ds.sln
	new file:   ZGame/3dsMax/lib3ds-1.3.0/msvc8/lib3ds.vcproj
	new file:   ZGame/3dsMax/lib3ds-1.3.0/tools/3dsdump.1
	new file:   ZGame/3dsMax/lib3ds-1.3.0/tools/3dsdump.1.in
	new file:   ZGame/3dsMax/lib3ds-1.3.0/tools/3dsdump.c
	new file:   ZGame/3dsMax/lib3ds-1.3.0/tools/Makefile.am
	new file:   ZGame/3dsMax/lib3ds-1.3.0/tools/Makefile.in

+---------+---------+---------+---------+---------+---------+---------+---------+ 
3dsdump.2015/05/29.15_48_17.20.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	new file:   Code/3ds/3dsdump/3dsdump_2005.sln
	new file:   Code/3ds/3dsdump/3dsdump_2005/3dsdump.c
	new file:   Code/3ds/3dsdump/3dsdump_2005/3dsdump_2005.vcproj
	new file:   Code/3ds/3dsdump/3dsdump_2005/lib3ds.h
	modified:   Code/3ds/3dsplay/3dsplay/3dsplay_2005.vcproj
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
media.2015/05/29.15_55_09.89.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	new file:   ZGame/media/3ds/Examples.3ds.150529.7z
