@@ -59,8 +59,8 @@
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-05-28 17:55:41 L.217'21859 T1980717820.K ~290 +----+----+----+----+----+
-     TimeCnt : //z 2015-05-22 17:23:06 L.223'23814 T1570279794.K ~10  +----+----+----+----+----+
+     Zndex_E : //z 2015-05-29 16:02:31 L.216'28649 T751013779 .K ~316 +----+----+----+----+----+
+     TimeCnt : //z 2015-05-29 16:00:49 L.216'28751 T750941946 .K ~11  +----+----+----+----+----+
      Reg.Cnt : //z 2015-05-28 17:45:17 L.217'22483 T1979531806.K ~16  +----+----+----+----+----+
      #16  R+ : //z 2015-05-28 17:45:17 L.217'22483 T1979531806.K ~16    V+.295  L+.337  
      #15  R+ : //z 2015-05-22 17:22:59 L.223'23821 T1570244025.K ~15    V+.273  L+.295  
@@ -79,7 +79,8 @@
      #2   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~2     V+.19   L+.104  
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Version : //z 2015-05-28 17:55:41 L.217'21859 T1980717820.K ~306   R+.16   L+.343  --+----+
+     Version : //z 2015-05-29 16:02:31 L.216'28649 T751013779 .K ~332   R+.16   L+.348  --+----+
+     #17  V+ : //z 2015-05-29 16:01:55 L.216'28685 T750977912 .K ~323   R+.16   L+.347  
      #16  V+ : //z 2015-05-28 17:46:03 L.217'22437 T1979567706.K ~304   R+.16   L+.342  
      #15  R+ : //z 2015-05-28 17:45:17 L.217'22483 T1979531806.K ~295   R+.16   L+.338  V+.295  
      #15  V+ : //z 2015-05-26 16:59:26 L.219'25234 T553790784 .K ~285   R+.14   L+.293  
@@ -335,10 +336,14 @@ set_target_properties(${prj_target} PROPERTIES FOLDER "test")
 #endregion //z 2015-05-22 17:22:59 L.223'23821 BG57IV3@XCL T1570244025.K.F4146951713-+----+----+
 
 #region 05-28 17:45 R#.16   @3ds
-01. 
+01. 3ds 相关工具
 lib3ds
 3ds dump
 3ds play
 http://www.gametutorials.com/ s 3ds
 潘李亮 evlution 3d
+
+//z 2015-05-29 16:00:49 L.216'28751 T750941946 .K[T11,L345,R16,V311]
+02. 读取图像文件，可以使用 freeimg。
+re: 2015-05-29 16:01 zitem freeimage 结合play，载入其他类型素材（不限于tga）
 #endregion //z 2015-05-28 17:45:17 L.217'22483 BG57IV3@XCL T1979531806.K.F4146951713-+----+----+
