@@ -1185,3 +1185,14 @@ Changes to be committed:
 	modified:   History.txt
 	new file:   ZGame/media/3ds/Examples.3ds.150529.7z
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+D.2015/05/29.18_04_02.34.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
